cloud/istio/ssh-multiplex/single-port-multiplex.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssh-multiplex
spec:
  hosts:
  - "*"
  gateways:
  - default/notebook-gateway
  tcp:
  - match:
    - port: 31400  # one of the default ports for istio-ingressgateway
    route:
    - destination:
        host: ssh-multiplex-0.ssh-multiplex.default.svc.cluster.local
        port:
          number: 2222
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ssh-multiplex
spec:
  host: "*.ssh-multiplex.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: ssh-multiplex
# spec:
#   hosts:
#   - ssh-multiplex-0.ssh-multiplex.svc.cluster.local
#   ports:
#   - number: 2222
#     name: ssh
#     protocol: TCP
#   location: MESH_INTERNAL
#   resolution: DNS
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
spec:
  ports:
  - port: 2222
    name: ssh
  clusterIP: None  # A headless service
  selector:
    app: ssh-multiplex
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ssh-multiplex
  labels:
    app: ssh-multiplex
spec:
  selector:
    matchLabels:
      app: ssh-multiplex
  replicas: 2
  serviceName: "ssh-multiplex"
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: ssh-multiplex
      annotations:
        sidecar.istio.io/inject: "false" # TODO
    spec:
      containers:
      - name: openssh-server
        image: lscr.io/linuxserver/openssh-server:9.3_p2-r0-ls136
        ports:
        - containerPort: 2222
